# RamAssistedOrbit

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
cfg/: config.json
scripts/: animation.py  notes.txt  plots.py
src/: CMakeLists.txt  aerodynamics.cpp  aerodynamics.hpp  atmosphere.cpp  atmosphere.hpp  constants.hpp  dynamic_array.hpp  earth.cpp  earth.hpp  functions.cpp  functions.hpp  gnc.cpp  gnc.hpp  input.cpp  input.hpp  libMath.h  main.cpp  ode.hpp  output.cpp  output.hpp  propulsion.cpp  propulsion.hpp  simulation.cpp  simulation.hpp  state_6dof.hpp  table.hpp  test.cpp  test.hpp  track_dynamics.cpp  track_dynamics.hpp  vehicle.cpp  vehicle.hpp  vehicle_ode.hpp
test/: CMakeLists.txt  test_aerodynamics.cpp  test_atmosphere.cpp  test_earth.cpp  test_functions.cpp
